--- a/Readme
+++ b/Readme
@@ -1,3 +1,3 @@
 This is a new Trre Demo implemented Hello New Tree Demo
-Tree is a Data Structure
+Tree is a popular Data Structure
 Tree has a root
