--- a/Readme
+++ b/Readme
@@ -1,7 +1,4 @@
 This is a new Trre Demo implemented Hello New Tree Demo
-<<<<<<< HEAD
-Tree is a famous Data Structure
-=======
 Tree is a popular Data Structure
->>>>>>> origin/main
 Tree has a root
+Tree has leaves
