Leaves Characterstic Added

--- a/Readme
+++ b/Readme
@@ -2,3 +2,4 @@ This is a new Trre Demo implemented Hello New Tree Demo
 Tree is a popular Data Structure
 Tree has a root
 Tree has leaves
+Leaves don't have children
