--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
 This is a new Trre Demo implemented Hello New Tree Demo
 Tree is a popular Data Structure
 Tree has a root
-Tree has leaves
+Tree has leaves at the last level
